--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.julie.myapplication" >
+    package="com.example.julie.myapplication">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -13,10 +13,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,14 +25,17 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" >
-        </activity>
-        <activity android:name=".SignupActivity" >
-        </activity>
-        <activity android:name=".ViewActivity" >
-        </activity>
-        <activity android:name=".ListClassesActivity" >
-        </activity>
+            android:label="@string/title_activity_login" />
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".ViewActivity" />
+        <activity
+            android:name=".ClassesListActivity"
+            android:label="@string/title_activity_classes_list"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ScheduleListActivity"
+            android:label="@string/title_activity_schedule_list"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
