--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
             android:label="@string/title_activity_schedule_list"
             android:theme="@style/AppTheme" />
         <activity android:name=".NewClassActivity" />
-        <activity android:name=".NewScheduleActivity"></activity>
+        <activity android:name=".NewScheduleActivity" />
+        <activity android:name=".EditClassActivity"></activity>
     </application>
 
 </manifest>
